dynamic-storage-test/templates/ingress-webdav.yaml
#
# Copyright (c) 2021 the original author or authors.
# DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
#
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.
#
#

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webdav-ingress
  namespace: storage-test
spec:
  rules:
    - http:
        paths:
        - path: /webdav/test
          pathType: Prefix
          backend:
            service:
              name: webdav-service
              port:
                number: 80
